--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,8 +7,8 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #2E2F42;
-  background-color: #FFFFFF);
+  color: #2e2f42;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,60 +21,151 @@
   box-sizing: border-box;
 }
 
+img {
+  width: 360px;
+  height: 200px;
+  object-fit: cover;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 .search-form {
-  margin-top: 20px;
   display: flex;
-  justify-content: center;
-  gap: 10px;
+  align-items: center;
+  width: 372px;
+  margin: 32px auto;
 }
 
-.search-form label {
-  display: flex;
-  flex-direction: column;
+button {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 8px;
+  background: #4e75ff;
+  height: 40px;
+  width: 91px;
+  padding: 8px 16px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
+input[type='text'] {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  background: #fff;
+  padding: 8px 16px 8px 16px;
+  border: 1px solid #808080;
+  margin-right: 8px;
+  color: #808080;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input[type='text']:hover {
+  border: 1px solid #000000;
+}
+
+input[type='text']:focus {
+  outline: none;
+  border: 1px solid #4e75ff;
+  color: #2e2f42;
+}
+
+.card {
+  border: 1px solid #808080;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card:hover {
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .gallery {
+  margin: 0 auto;
+  width: 1134px;
   display: flex;
+  gap: 24px;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+}
+
+.item-img {
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 48px;
+}
+
+.elem-img {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.elem-name {
+  font-weight: 600;
+  line-height: 1.33;
 }
 
 .loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #3498db;
+  width: 32px;
+  height: 32px;
+  position: relative;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-  display: none;
+  color: #808080;
+  animation: fill 1s ease-in infinite alternate;
+}
+.loader::before,
+.loader::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  left: 48px;
+  top: 0;
+  animation: fill 0.9s ease-in infinite alternate;
 }
 
-@keyframes spin {
+.loader::after {
+  left: auto;
+  right: 48px;
+  animation-duration: 1.1s;
+}
+
+@keyframes fill {
   0% {
-    transform: rotate(0deg);
+    box-shadow: 0 0 0 2px inset;
   }
   100% {
-    transform: rotate(360deg);
+    box-shadow: 0 0 0 10px inset;
   }
 }
-
-.message-container {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1000;
-}
-
-
